--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,18 @@ avatar: https://avatars2.githubusercontent.com/u/10812154?v=3&s=200
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: hi@wealthbot.io
   facebook:
   flickr:
   github: wealthbot-io/wealthbot
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  rss: rss
   twitter: wealthbot
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: channel/UCpOVzdXQ8UGVruoM0D5Fp7Q
+  googleplus: +WealthbotIoApp
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -37,7 +37,7 @@ footer-links:
 disqus: wealthbot
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-61408604-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
